--- a/index.html
+++ b/index.html
@@ -1,75 +1,250 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
-    </style>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <link rel="website icon" type="png" href="img/cat.png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="shortcut icon" type="image/png" href="img/favicon.png" />
-    <title>My Love</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="intro.css">
+    <title>Happy New Year 2024</title>
 </head>
-
 <body>
-    <div id="wrapper">
-        <h1><b>LOVE DAYS</h1></b>
-
-        <div id="clock-box">
-            <div id="clock">
-                <year>0 YEAR </year>
-                <month>0 MONTH</month>
-                <date>0 DAYS</date>
-                <time>00:00:00</time>
-            </div>
-        </div>
-
-        <div id="info">
-            <div class="one">
-                <img src="img/image1.png" class="avt">
-
-                <p>
-                <div class="mars">
-                    <i class="fa fa-mars" aria-hidden="true" style="color: blue; font-size: 20px;">
-                </div></i>
-                <br>
-                <a style="text-decoration: none" href="https://www.facebook.com/profile.php?id=100022374431079"
-                    target="_blank"><b> Trương Ngọc Phú</b></p></a>
-            </div>
-
-            <div id="heart">
-                <center>
-                    <!-- <a id="heart" style="text-decoration-line: none;" href="./index1.html">  -->
-                    ❤
-                    <!-- <pi><b>12-07-2022</pi></b> -->
-                    </a>
-                </center>
-                <anni><b>00/00/0000</anni></b>
-            </div>
-            <div class="two">
-                <img src="img/image2.png" class="avt">
-                <p>
-                <div class="venus">
-                    <i class="fa fa-venus" aria-hidden="true" style="color: red; font-size: 20px;"></i>
+    <div class="box-slider">
+        <div class="slider1">
+            <img src="img/bgr.jpg" alt="">
+            <div class="happynewyear">
+                <div class="textHappynewyear">
+                    <div class="box-span">
+                        <span></span>
+                    </div>
+                    <div class="box-span">
+                        <span></span>
+                    </div>
+                    <div class="box-span">
+                        <span></span>
+                    </div>
+                    <div class="box-span">
+                        <span></span>
+                    </div>
                 </div>
-                <br>
-                <a style="text-decoration: none" href="https://www.facebook.com/profile.php?id=100074095176082"
-                    target="_blank"><b> Đỗ Nguyễn Hoàng Lam</b></p></a>
+            </div>
+            <div class="box-button">
+                <div class="button">
+                    <button>Ấn vào đây nè!</button>
+                    <span><i class="fa-solid fa-heart"></i></span>
+                </div>
+            </div>
+            <div class="box-slider_img1">
+                <div class="slider-img1">
+                    <img src="img/circular-pattern.png" alt="">
+                </div>
+                <div class="pattern">
+                    <img src="img/pattern.png" alt="">
+                </div>
+            </div>
+            <div class="circle">
+                <span></span>
+            </div>
+            <div class="box-flower">
+                <div class="flower-img">
+                    <img src="img/flower.png" alt="">
+                </div>
+                <div class="flower-img">
+                    <img src="img/flower.png" alt="">
+                </div>
+                <div class="flower-img">
+                    <img src="img/flower1.png" alt="">
+                </div>
+                <div class="flower-img">
+                    <img src="img/flower1.png" alt="">
+                </div>
+                <div class="flower-img">
+                    <img src="img/flower2.png" alt="">
+                </div>
+                <div class="flower-img">
+                    <img src="img/flower2.png" alt="">
+                </div>
+            </div>
+            <div class="box-slider_img2">
+                <div class="box-slider-img2">
+                    <div class="slider-img2">
+                        <img src="img/lanterns.png" alt="">
+                    </div>
+                </div>
+                <div class="box-slider-img3">
+                    <div class="slider-img3">
+                        <img src="img/lanterns.png" alt="">
+                    </div>
+                </div>
+                <div class="box-slider-img4">
+                    <div class="slider-img4">
+                        <img src="img/lanterns.png" alt="">
+                    </div>
+                </div>
+                <div class="box-slider-img5">
+                    <div class="slider-img5">
+                        <img src="img/lanterns.png" alt="">
+                    </div>
+                </div>
+            </div>
+            <div class="slider-img6">
+                <img src="img/cloud-red1.png" alt="">
+                <img src="img/cloud-red2.png" alt="">
+                <img src="img/cloud-red2.png" alt="">
+            </div>
+            <div class="box-lion_dance">
+                <div class="lion_dance1">
+                    <img src="img/Lion-dance.gif" alt="">
+                </div>
+                <div class="lion_dance2">
+                    <img src="img/Lion-dance2.gif" alt="">
+                </div>
+            </div>
+            <div class="cat">
+                <img src="img/cat.png" alt="">
+            </div>
+            <div class="box-number">
+                <div class="number2023">
+                    <div class="number">
+                        <span>2</span>
+                    </div>
+                    <div class="number">
+                        <span>0</span>
+                    </div>
+                    <div class="number">
+                        <span>2</span>
+                    </div>
+                    <div class="number">
+                        <span>4</span>
+                    </div>
+                </div>
+            </div>
+            <div class="box-rim">
+                <div class="rim1">
+                    <img src="img/rim1.png" alt="">
+                </div>
+                <div class="rim2">
+                    <img src="img/rim1.png" alt="">
+                </div>
+            </div>
+            <div class="box-texture_clouds">
+                <div class="texture_clouds1">
+                    <img src="img/texture-clouds.png" alt="">
+                </div>
+                <div class="texture_clouds1">
+                    <img src="img/texture-clouds.png" alt="">
+                </div>
+                <div class="texture_clouds1">
+                    <img src="img/texture-clouds.png" alt="">
+                </div>
+                <div class="texture_clouds1">
+                    <img src="img/texture-clouds.png" alt="">
+                </div>
+                <div class="texture_clouds1">
+                    <img src="img/texture-clouds.png" alt="">
+                </div>
+            </div>
+            <div class="box-big_clouds">
+                <div class="big_clouds1">
+                    <img src="img/big-clouds1.png" alt="">
+                </div>
+                <div class="big_clouds2">
+                    <img src="img/big-clouds2.png" alt="">
+                </div>
+                <div class="big_clouds3">
+                    <img src="img/big-clouds3.png" alt="">
+                </div>
             </div>
         </div>
-        <div id="music">
-            <center>
-                <audio loop autoplay controls>Your browser does not support the audio element.</audio>
+        <div class="slider2">
+            <div class="rhombus"></div>
+            <div class="rhombus"></div>
+            <div class="rhombus-img">
+                <img src="img/q.jpg" alt="">
+            </div>
+            <div class="mail">
+                <button><i class="fa-regular fa-envelope"></i></button>
+                <span class="heart"><i class="fa-solid fa-heart"></i></span>
+                </div>
+            </div>
+            <div class="box-button1">
+                <div class="button">
+                    <button>Ấn vào đây nè!</button>
+                    <span><i class="fa-solid fa-heart"></i></span>
+                </div>
+            </div>
         </div>
-        <footer>
-            <center><b>Thank you for your love 💕
-        </footer></b></center>
-        <div id="about">Code by<a style="text-decoration: none"
-                href="https://www.facebook.com/profile.php?id=100022374431079" target="_blank" style="color:black">
-                Trương Ngọc Phú </div>
-        </center>
+        <div class="slider3">
+            <div class="box-content">
+                <div class="left">
+                    <img src="img/bg1.jpg" alt="">
+                    <div class="center">
+
+                    </div>
+                    <div class="lanterns-content">
+                        <img src="img/lanterns.png" alt="">
+                    </div>
+                    <div class="box-big_flowers">
+                        <img src="img/big-flower.png" alt="">
+                        <img src="img/big-flower.png" alt="">
+                        <img src="img/big-flower.png" alt="">
+                        <img src="img/big-flower1.png" alt="">
+                        <img src="img/big-flower1.png" alt="">
+                        <img src="img/big-flower2.png" alt="">
+                        <img src="img/big-flower2.png" alt="">
+                        <img src="img/big-flower2.png" alt="">
+                    </div>
+                    <div class="box-circle_left">
+                        <div class="circle_left">
+                            <img src="img/circular-pattern.png" alt="">
+                            <div class="text-content">
+                                <h2>Happy New</h2>
+                                <h1>Year</h1>
+                                <span>2024</span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="apricot_blossom">
+                        <img src="img/apricot-blossom.png" alt="">
+                        <img src="img/apricot-blossom.png" alt="">
+                        <img src="img/apricot-blossom.png" alt="">
+                        <img src="img/apricot-blossom.png" alt="">
+                        <img src="img/apricot-blossom.png" alt="">
+                        <img src="img/apricot-blossom.png" alt="">
+                    </div>
+                </div>
+                <div class="right">
+                    <div class="content">
+                        <div class="title">
+                            <h1>&#129505Gửi em!</h1>
+                        </div>
+                        <p>Năm mới, anh chúc cho em được nhiều sức khỏe.
+                             Còn về hạnh phúc và niềm vui, anh mong rằng chính 
+                             mình sẽ là người mang những điều đó đến với em. Yêu 
+                             em nhiều! Năm mới đến rồi, một năm qua thật đặc biệt 
+                             với anh và cả em nữa. Năm mới đến đồng nghĩa với việc 
+                             anh lại được nối dài năm tháng yêu thương chăm sóc em. 
+                             Anh chúc em tràn đầy hạnh phúc ngọt ngào hãy gìn giữ và 
+                             nuôi dưỡng tình yêu của chúng mình em nhé.
+                        </p>
+                        <div class="fixedContent">
+                            <h3>Người gửi: Trương Ngọc Phú</h3>
+                            
+                        </div>
+                        <p>Chúng mình cùng nhau đếm xem chúng ta đã trải qua bao nhiêu tháng bên nhau nhé!</p>
+                        <a href="mylove.html">Bấm dô đây nè!!!!</a>
+                    </div>
+                </div>
+            </div>
+            <i class="fa-solid fa-xmark"></i>
+        </div>
     </div>
 
-    <script src="app.js"></script>
+    <audio id="song">
+        <source src="img/nhac.mp3" type="audio/mp3">
+    </audio>
+
+<script src="intro.js"></script>
 </body>
+</html>
