--- a/index.html
+++ b/index.html
@@ -235,8 +235,9 @@
         window.onload = () => {
             const popup = document.createElement("div");
             popup.className = "popup";
-            popup.innerHTML = `
+popup.innerHTML = `
 <div class="popup-box">
+
     <h3>Không còn đếm tiếp, nhưng vẫn còn nhớ.</h3>
 
     <p><strong>3 năm 7 tháng 15 ngày</strong> — với người khác có thể chỉ là một khoảng thời gian, nhưng với anh đó là cả một đoạn đời có em ở bên. Không phải ngày nào cũng hoàn hảo, nhưng là những ngày thật — thật sự vui, thật sự buồn, và thật sự có ý nghĩa.</p>
@@ -251,16 +252,17 @@
 
     <p>Anh không dám hứa những điều lớn lao. Chỉ là nếu trong lòng em vẫn còn một góc nhỏ dành cho anh, anh mong một ngày nào đó em có thể nhìn lại anh — không phải phiên bản cũ đã làm em tổn thương, mà là một người đang thật sự học cách yêu em đúng hơn.</p>
 
-    <p>Một người biết dịu dàng thay vì nóng nảy.<br>
-    Một người biết giữ em bằng sự thấu hiểu, không phải bằng kiểm soát.<br>
-    Một người mà khi ở cạnh, em không cần phải gồng mình nữa.</p>
+    <p>
+        Một người biết dịu dàng thay vì nóng nảy.<br>
+        Một người biết giữ em bằng sự thấu hiểu, không phải bằng kiểm soát.<br>
+        Một người mà khi ở cạnh, em không cần phải gồng mình nữa.
+    </p>
 
     <p>Còn nếu em đã thật sự buông, anh vẫn sẽ tôn trọng quyết định đó. Chỉ là anh không muốn rời khỏi cuộc đời em trong im lặng, khi trong lòng mình vẫn còn quá nhiều điều chưa kịp làm tốt.</p>
 
     <p>Anh vẫn ở đây — không phải để níu kéo em bằng lời nói, mà bằng sự thay đổi từng ngày, dù em có nhìn thấy hay không.</p>
 
-    <p><strong>Và dù sau này em đi về phía nào, anh vẫn biết ơn vì đã từng có em trong cuộc đời.</strong></p>
-
+    <p><strong>Và dù sau này em đi về phía nào, anh vẫn biết ơn vì đã từng có em trong cuộc đời — người đã khiến anh hiểu thế nào là yêu thật lòng, và thế nào là cảm giác tiếc nuối khi đánh mất.</strong></p>
 
 <div style="margin-top: 30px; font-size: 1rem; color: #666;">
   <a href="kiniem.html" target="_blank" style="color: #333; text-decoration: underline;">
