--- a/kiniem.html
+++ b/kiniem.html
@@ -24,7 +24,7 @@
         <div class="memory-item wide"><img src="img/12.jpg"></div>
         <div class="memory-item"><img src="img/13.jpg"></div>
         <div class="memory-item"><img src="img/14.jpg"></div>
-        <div class="memory-item tall"><img src="img/15.JPG"></div>
+        <div class="memory-item tall"><img src="img/15.jpg"></div>
         <div class="memory-item"><img src="img/16.jpg"></div>
         <!-- 20 ảnh mới -->
         <div class="memory-item"><img src="img/17.jpg"></div>
